# jamzig

./: .gitignore  .gitmodules  .ignore  IMPLEMENTATION_PRINCIPLES.md  JAMZIG_STYLE.md  LICENCE  README.mkd  TIGER_STYLE.md  build.zig  build.zig.zon  flake.nix
.github/workflows/: cross-platform-build-and-test.yml  cross-platform-build-and-test.yml.disabled  linux-test.yml  test.yml
bench/: 1756571856.json  1756658864.json  1757259226.json  1757259346.json  1757259413.json  1757276438.json  1757338533.json  1757435232.json  1757621995.json  1757692373.json  report.py
ffi/bls/: build.zig  build.zig.zon
ffi/mcl/: build.zig  (+1 more)
ffi/rust/crypto/: Cargo.toml
ffi/rust/crypto/src/: lib.rs  ring_vrf.rs  ring_vrf_ffi.rs  sign.rs
ffi/rust/crypto/src/ring_vrf/: commitment.rs  context.rs  ffi.rs  prover.rs  types.rs  verifier.rs
ffi/rust/polkavm_ffi/: Cargo.toml
ffi/rust/polkavm_ffi/src/: lib.rs
profiles/: README.md
scripts/: check-jamtestvector-updates  release_conformance.sh  run_conformance_test.sh  tracy-profile.sh
src/: accumulate.zig  accumulate_root.zig  accumulate_test.zig  accumulated_reports.zig  accumulation_outputs.zig  ancestry.zig  assurances.zig  assurances_test.zig  authorization.zig  authorization_queue.zig  authorizations.zig  authorizations_test.zig  authorizer_pool.zig  authorizer_queue.zig  auxiliary.zig  available_reports.zig  bench_block_import.zig  bench_target_trace.zig  beta.zig  block_import.zig  build_tuned_allocator.zig  codec.zig  codec_test.zig  crypto.zig  debug_trace_reconstruction.zig  disputes.zig  disputes_test.zig  entropy.zig  erasure_coding.zig  fisher_yates.zig  fisher_yates_test.zig  fuzz_protocol_target.zig  guarantor_assignments.zig  guarantor_assignments_test.zig  guarantor_validation.zig  header_validator.zig  io.zig  itertools.zig  jam_conformance.zig  jam_conformance_fuzzer.zig  (+66 more)
tests/: .gitmodules  safrole_test.zig
(+378 files in other folders)
