[package]
name = "jamzig-crypto"
version = "0.1.0"
edition = "2021"

# [dependencies]
# bandersnatch_vrfs = { git = "https://github.com/w3f/ring-vrf", version = "0.0.4" }

[dependencies]
ark-ec-vrfs ={ git = "https://github.com/davxy/ark-ec-vrfs", rev = "ea35e22", features = ["bandersnatch", "ring", "parallel"] }
hex = "0.4.3"
libc = "0.2.167"
lru = "0.12.4"
thiserror = "1.0.64"

[lib]
crate-type = ["staticlib"]
